# squiggle-instrumentation

./: README.md  pyproject.toml
src/squiggle_instrumentation/: cli.py  hf_adapter.py  probe_runner.py
