[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squiggle-instrumentation"
version = "0.1.0"
description = "Instrumentation and capture hooks for logging activations/embeddings during training."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Todd Michaud" }]
dependencies = [
  "numpy>=1.26",
  "pyarrow>=15.0",
  "torch>=2.2",
  "squiggle-core>=0.1.0",
]

[project.scripts]
squiggle-probe = "squiggle_instrumentation.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
hf = [
  "transformers>=4.40",
  "peft>=0.10",
  "datasets>=2.19",
  "accelerate>=0.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
